--- a/autoshutdowntest/build.gradle
+++ b/autoshutdowntest/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-// apply plugin: 'com.jakewharton.butterknife'
 
 version="2020.1.27"
 
@@ -34,14 +33,10 @@ android
 
 dependencies
 {
-  compile 'com.google.code.gson:gson:2.8.5'
+//   compile 'com.google.code.gson:gson:2.8.5'
   compile 'com.google.protobuf:protobuf-java:3.4.0'
-  compile 'com.upokecenter:cbor:4.4.4'
-  compile group: 'com.squareup.okhttp', name: 'okhttp', version: '1.6.0'
-//   implementation 'com.jakewharton:butterknife:10.2.3'
+//   compile 'com.upokecenter:cbor:4.4.4'
   implementation 'org.apache.commons:commons-io:1.3.2'
-//   annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
   implementation group: 'com.koushikdutta.async', name: 'androidasync', version: '2.1.7'
-  compile 'com.mcxiaoke.volley:library:1.0.19'
-  implementation 'com.android.support:appcompat-v7:28.0.0'
+//   implementation 'com.android.support:appcompat-v7:28.0.0'
 }
