--- a/autoshutdowntest/build.gradle
+++ b/autoshutdowntest/build.gradle
@@ -34,7 +34,7 @@ android
 dependencies
 {
 //   compile 'com.google.code.gson:gson:2.8.5'
-  compile 'com.google.protobuf:protobuf-java:3.4.0'
+  implementation 'com.google.protobuf:protobuf-java:3.4.0'
 //   compile 'com.upokecenter:cbor:4.4.4'
   implementation 'org.apache.commons:commons-io:1.3.2'
   implementation group: 'com.koushikdutta.async', name: 'androidasync', version: '2.1.7'
