--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript
   }
   dependencies 
   {
-    classpath 'com.android.tools.build:gradle:4.0.1'
+//     classpath 'com.android.tools.build:gradle:4.0.1'
+    classpath 'com.android.tools.build:gradle:7.4.1'
     classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
   }
 }
