--- a/autoshutdowntest/build.gradle
+++ b/autoshutdowntest/build.gradle
@@ -33,7 +33,7 @@ android
 
 dependencies
 {
-//   compile 'com.google.code.gson:gson:2.8.5'
+  implementation 'com.upokecenter:cbor:4.4.4'
   implementation 'com.google.protobuf:protobuf-java:3.4.0'
 //   compile 'com.upokecenter:cbor:4.4.4'
   implementation 'org.apache.commons:commons-io:1.3.2'
