--- a/autoshutdowntest/build.gradle
+++ b/autoshutdowntest/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jakewharton.butterknife'
 
 version="2020.1.27"
 
@@ -35,7 +36,8 @@ dependencies
 {
   implementation 'com.upokecenter:cbor:4.4.4'
   implementation 'com.google.protobuf:protobuf-java:3.4.0'
-//   compile 'com.upokecenter:cbor:4.4.4'
+  implementation 'com.jakewharton:butterknife:10.2.3'
+  annotationProcessor 'com.jakewharton:butterknife:10.2.3'
   implementation 'org.apache.commons:commons-io:1.3.2'
   implementation group: 'com.koushikdutta.async', name: 'androidasync', version: '2.1.7'
 //   implementation 'com.android.support:appcompat-v7:28.0.0'
