--- a/autoshutdowntest/src/main/AndroidManifest.xml
+++ b/autoshutdowntest/src/main/AndroidManifest.xml
@@ -6,4 +6,22 @@
   <uses-sdk
     android:minSdkVersion="8"
     android:targetSdkVersion="21" />
+  
+  <application
+    android:allowBackup="true"
+    android:icon="@drawable/ic_launcher"
+    android:label="@string/app_name"
+    android:theme="@android:style/Theme.NoTitleBar"
+    android:logo="@drawable/ic_launcher"
+    >
+    <activity
+      android:name="com.stupidbeauty.shutdownat2100androidnative.StopUsingPhoneActivity"
+      android:screenOrientation="portrait"
+      android:label="@string/app_name" >
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+      </intent-filter>
+    </activity>
+  </application>
+
 </manifest>
