--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,7 @@
 android.useAndroidX = true
 Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2
+
+# https://developer.android.com/build/releases/gradle-plugin#default-changes
+
+# @BindView requires a constant resource ID
+android.nonFinalResIds=false
