--- a/autoshutdowntest/src/main/AndroidManifest.xml
+++ b/autoshutdowntest/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
     <activity
       android:name="com.stupidbeauty.shutdownat2100androidnative.StopUsingPhoneActivity"
       android:screenOrientation="portrait"
-      android:label="@string/app_name" >
+      android:label="@string/app_name" 
+      android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
       </intent-filter>
