--- a/autoshutdowntest/src/main/AndroidManifest.xml
+++ b/autoshutdowntest/src/main/AndroidManifest.xml
@@ -10,17 +10,13 @@
   <application
     android:allowBackup="true"
     android:icon="@drawable/ic_launcher"
-    android:label="@string/app_name"
     android:logo="@drawable/ic_launcher"
     >
     <activity
       android:name="com.stupidbeauty.shutdownat2100androidnative.StopUsingPhoneActivity"
       android:screenOrientation="portrait"
-      android:label="@string/app_name" 
+      android:label="@string/stopUsingPhone" 
       android:exported="true">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-      </intent-filter>
     </activity>
   </application>
 </manifest>
