--- a/autoshutdowntest/build.gradle
+++ b/autoshutdowntest/build.gradle
@@ -38,7 +38,7 @@ dependencies
   implementation 'com.google.protobuf:protobuf-java:3.4.0'
   implementation 'com.jakewharton:butterknife:10.2.3'
   annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
-//   annotationProcessor 'com.jakewharton:butterknife:10.2.3'
+  implementation 'com.github.hxcan:CodePosition:2023.3.29'
   implementation 'org.apache.commons:commons-io:1.3.2'
   implementation group: 'com.koushikdutta.async', name: 'androidasync', version: '2.1.7'
 //   implementation 'com.android.support:appcompat-v7:28.0.0'
