--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,10 @@ Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2
 # @BindView requires a constant resource ID
 android.nonFinalResIds=false
 
-systemProp.http.proxyHost=127.0.0.1
-systemProp.http.proxyPort=8118
-systemProp.https.proxyHost=127.0.0.1
-systemProp.https.proxyPort=8118
-
-systemProp.socksProxyHost=127.0.0.1
-systemProp.socksProxyPort=9090
+# systemProp.http.proxyHost=127.0.0.1
+# systemProp.http.proxyPort=8118
+# systemProp.https.proxyHost=127.0.0.1
+# systemProp.https.proxyPort=8118
+# 
+# systemProp.socksProxyHost=127.0.0.1
+# systemProp.socksProxyPort=9090
