--- a/autoshutdowntest/src/main/AndroidManifest.xml
+++ b/autoshutdowntest/src/main/AndroidManifest.xml
@@ -1,19 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.stupidbeauty.shutdownat2100.helper"
-  android:versionCode="1"
-  android:versionName="1.0" >
-  <uses-sdk
-    android:minSdkVersion="8"
-    android:targetSdkVersion="21" />
-  <application
-    android:allowBackup="true"
-    >
-    <activity
-      android:name="com.stupidbeauty.shutdownat2100androidnative.StopUsingPhoneActivity"
-      android:screenOrientation="portrait"
-      android:label="@string/stopUsingPhone" 
-      android:exported="true">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.stupidbeauty.shutdownat2100.helper" android:versionCode="1" android:versionName="1.0">
+  <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+  <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="21"/>
+  <application android:allowBackup="true">
+    <activity android:name="com.stupidbeauty.shutdownat2100androidnative.StopUsingPhoneActivity" android:screenOrientation="portrait" android:label="@string/stopUsingPhone" android:exported="true">
     </activity>
   </application>
 </manifest>
